--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/Main.js",
-    "prepare": "tsc && git add . && git commit -m publish && npm version patch "
+    "prepare": "tsc && git add . && git commit -m publish && git push && npm version patch "
   },
   "author": "terran.tian",
   "license": "ISC",
